Fixing contrast issue for all <label> elements

--- a/src/components/FeatureDetail/FeatureDetailContainerStyles.scss
+++ b/src/components/FeatureDetail/FeatureDetailContainerStyles.scss
@@ -101,7 +101,7 @@
                 display: flex;
                 align-items: center;
                 min-width: 150px;
-                color: #7f7f7f;
+                color: #767676;
                 &.stacked {
                     .main {
                         display: block;
